@@ -6,6 +6,7 @@ import stroom.dashboard.expression.v1.ValDouble;
 import stroom.dashboard.expression.v1.ValLong;
 import stroom.dashboard.expression.v1.ValNull;
 import stroom.dashboard.expression.v1.ValString;
+import stroom.dashboard.expression.v1.Values;
 import stroom.dashboard.expression.v1.ValuesConsumer;
 import stroom.query.common.v2.ErrorConsumer;
 import stroom.statistics.impl.sql.PreparedStatementUtil;
@@ -119,7 +120,7 @@ class StatisticsSearchServiceImpl implements StatisticsSearchService {
 
             // build a mapper function to convert a resultSet row into a String[] based on the fields
             // required by all coprocessors
-            Function<ResultSet, Val[]> resultSetMapper = buildResultSetMapper(fieldIndex, statisticStoreEntity);
+            Function<ResultSet, Values> resultSetMapper = buildResultSetMapper(fieldIndex, statisticStoreEntity);
 
             // the query will not be executed until somebody subscribes to the flowable
             getFlowableQueryResults(taskContext, sql, resultSetMapper, valuesConsumer);
@@ -238,7 +239,7 @@ class StatisticsSearchServiceImpl implements StatisticsSearchService {
      * Build a mapper function that will only extract the columns of interest from the resultSet row.
      * Assumes something external to the returned function will advance the resultSet
      */
-    private Function<ResultSet, Val[]> buildResultSetMapper(
+    private Function<ResultSet, Values> buildResultSetMapper(
             final FieldIndex fieldIndex,
             final StatisticStoreDoc statisticStoreEntity) {
 
@@ -279,7 +280,7 @@ class StatisticsSearchServiceImpl implements StatisticsSearchService {
                             String.format("Adding extraction function for field %s, idx %s", fieldName, idx));
                     return extractor;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         final int arrSize = valueExtractors.size();
 
@@ -311,7 +312,7 @@ class StatisticsSearchServiceImpl implements StatisticsSearchService {
                             e);
                 }
             });
-            return data;
+            return Values.of(data);
         };
     }
 
@@ -392,7 +393,7 @@ class StatisticsSearchServiceImpl implements StatisticsSearchService {
 
     private void getFlowableQueryResults(final TaskContext taskContext,
                                          final SqlBuilder sql,
-                                         final Function<ResultSet, Val[]> resultSetMapper,
+                                         final Function<ResultSet, Values> resultSetMapper,
                                          final ValuesConsumer valuesConsumer) {
         long count = 0;
 
@@ -422,8 +423,8 @@ class StatisticsSearchServiceImpl implements StatisticsSearchService {
                     // TODO prob needs to change in 6.1
                     while (resultSet.next() &&
                             !Thread.currentThread().isInterrupted()) {
-                        LOGGER.trace("Adding resultt");
-                        final Val[] values = resultSetMapper.apply(resultSet);
+                        LOGGER.trace("Adding result");
+                        final Values values = resultSetMapper.apply(resultSet);
                         valuesConsumer.add(values);
                         count++;
                     }
